--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,5 @@
 # defaults for tivoli backup client
 
 rpmdir: '/var/tmp/tivoliba/'
+backupclient_name: "{% if ansible_nodename == 'db.usegalaxy.no' %}DBUSEGALAXYNO{% else %}XXXTESTNODE{% endif %}"
+backupserver_ip: 129.177.30.195
