--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,6 +25,15 @@
   tags:
   - tivoliba
 
+- name: create tivoli logdir
+  file:
+    path: '{{ tivoli_logdir }}'
+    state: directory
+    mode: '0755'
+  tags:
+  - tivoliba
+
+
 - name: copy tivoli config
   template:
     src: dsm.sys.j2
