--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,4 @@ backupclient_name: "{% if ansible_nodename == 'db.usegalaxy.no' %}DBUSEGALAXYNO{
 backupserver_ip: 129.177.30.195
 tivoli_cfgdir: /opt/tivoli/tsm/client/ba/bin
 tivoli_logdir: /var/log/tivoli
+tivoli_errorlog: tivoli-error.log
