--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 # defaults for tivoli backup client
 
+backupdirs: "/etc /var"
 rpmdir: '/var/tmp/tivoliba/'
 backupclient_name: "{% if ansible_nodename == 'db.usegalaxy.no' %}DBUSEGALAXYNO{% else %}XXXTESTNODE{% endif %}"
 backupserver_ip: 129.177.30.195
