--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,9 @@
 ---
 # defaults for tivoli backup client
 
-backupdirs: "/etc /var"
+backupdirs: "/etc /var/spoo/cron"
 rpmdir: '/var/tmp/tivoliba/'
-backupclient_name: "{% if ansible_nodename == 'db.usegalaxy.no' %}DBUSEGALAXYNO{% else %}XXXTESTNODE{% endif %}"
+backupclient_name: "{% if ansible_nodename == 'db.usegalaxy.no' %}DBUSEGALAXYNO{% else %}apo.ii{% endif %}"
 backupserver_ip: 129.177.30.195
 tivoli_cfgdir: /opt/tivoli/tsm/client/ba/bin
 tivoli_logdir: /var/log/tivoli
