--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,19 @@
 [defaults]
+
+inventory = ./hosts.inv
+host_key_checking = False
+deprecation_warnings = False
+command_warnings = False
+remote_user = root
+gathering = smart
+fact_caching_connection = /tmp/facts_cache
+fact_caching = jsonfile
+fact_caching_timeout = 7200
+forks = 50
+retry_files_enabled = False
 roles_path = ../
+
+[ssh_connection]
+pipelining = True
+ssh_args = -o ControlMaster=auto -o ControlPersist=18000 -o PreferredAuthentications=publickey -o PasswordAuthentication=yes
+control_path = %(directory)s/ansible-ssh-%%h-%%p-%%r
