--- a/site-tivoli.yml
+++ b/site-tivoli.yml
@@ -3,6 +3,9 @@
 - hosts:
     - tbatest
   vars:
+    backupdirs: "/etc /var/spoo/cron"
+    backupclient_name: DBUSEGALAXYNO
+    backupserver_ip: 129.177.30.195
   become: true
   roles:
     - ansible-role-tivolibackupclient
