--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,10 @@
 ---
 # defaults for tivoli backup client
 
-backupdirs: "/etc /var/spoo/cron"
+#backupdirs: "/etc /var/spoo/cron"
 rpmdir: '/var/tmp/tivoliba/'
-backupclient_name: "{% if ansible_nodename == 'db.usegalaxy.no' %}DBUSEGALAXYNO{% else %}apo.ii{% endif %}"
-backupserver_ip: 129.177.30.195
+#backupclient_name: "{% if ansible_nodename == 'db.usegalaxy.no' %}DBUSEGALAXYNO{% else %}XXTEST{% endif %}"
+#backupserver_ip: 129.177.30.195
 tivoli_cfgdir: /opt/tivoli/tsm/client/ba/bin
 tivoli_logdir: /var/log/tivoli
 tivoli_errorlog: tivoli-error.log
